--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+
 # Prerequisites
 *.d
 
